# Mock-rag-chatbot

./: .env  .env.dev  .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
alive_terminal/: admin_backend.txt
config/: __init__.py  loader.py  settings.py
config/defaults/: chunker.yaml  chunking.yaml  embeddings.yaml  ingestion.yaml  preprocessing.yaml  session_store.yaml  vectordb.yaml
config/tools/: __init__.py  tool_registry.py
frontend/: app.py
frontend/.streamlit/: config.toml
scripts/: run_backend.sh  setup_env.sh
src/: __init__.py  main.py  models.py  schemas.py  utils.py
src/api/: __init__.py  asgi.py  dependencies.py  main.py  models.py  request_models.py  response_models.py  routes.py
src/config/: __init__.py  cache_config.py  constants.py  model_config.py  settings.py
src/container/: __init__.py  service_container.py
src/core/: __init__.py  base_tool.py  circuit_breaker.py  doc_ingestion.py  embeddings_handler.py  exceptions.py  llm_handler.py  log_buffer.py  redis_handler.py  slm_handler.py  state_manager.py  vector_db_handler.py
src/ingestion/parsers/: json_parser.py  markdown_parser.py
src/pipeline/: __init__.py  base.py  doc_summary.py  logic_router.py  orchestrator.py  rag.py  redis_cache.py  schemas.py
src/pipeline/nodes/: __init__.py  chunking_node.py  embedding_node.py  ingestion_node.py  preprocessing_node.py  vectordb_node.py
src/providers/cache/: __init__.py  base.py  noop.py  redis.py
src/providers/embeddings/: __init__.py  base.py  huggingface.py
src/providers/llm/: __init__.py  base.py  gemini.py  huggingface.py
src/providers/slm/: __init__.py  base.py  hf_causal.py  hf_seq2seq.py
src/providers/vectordb/: __init__.py  base.py  faiss.py  qdrant.py
src/tools/: __init__.py
src/tools/chunking/: __init__.py  base_chunker.py  semantic_chunker.py  sliding_window_chunker.py
src/tools/embeddings/: __init__.py  base_embedder.py  bge_embedder.py  embed_registry.py  mock_embedder.py
src/tools/ingestion/: __init__.py  document_processor.py  models.py
src/tools/ingestion/parsers/: __init__.py  base_parser.py  json_parser.py  markdown_parser.py  pdf_parser.py  text_parser.py
src/tools/preprocessors/: __init__.py  base_preprocessor.py  language_detector.py  text_cleaner.py
src/tools/vectordb/: __init__.py  base_vectordb.py  faiss_client.py  mock_vectordb.py  vectordb_registry.py
src/utils/: __init__.py  file_validator.py  helpers.py  monitoring_writer.py
