## FILE 6: pyproject.toml

\`\`\`toml
# ================================================================================
# Project Metadata & Dependencies (Modern Python Packaging)
# ================================================================================
# This is the modern way to configure Python projects (PEP 517, PEP 518)
# Replaces setup.py and setup.cfg for most projects

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "user-chatbot-backend"
version = "1.0.0"
description = "Production-grade RAG backend for user chatbot"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Team", email = "team@example.com"}
]
keywords = ["rag", "llm", "chatbot", "vector-db", "embeddings"]

# Classifiers for PyPI
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core Dependencies
dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    
    # Cache
    "redis[asyncio]>=5.0.0",
    
    # Vector DB
    "qdrant-client[fastembed]>=2.5.0",
    
    # ML/NLP
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    
    # Document Processing
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.11",
    "python-magic>=0.4.27",
    
    # HTTP Client
    "httpx[http2]>=0.25.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

# Optional dependencies for advanced features
gpu = [
    "torch[cuda12]>=2.0.0",  # Nvidia CUDA support
]

apple-silicon = [
    "torch[mps]>=2.0.0",  # Apple Metal Performance Shaders
]

# All optional dependencies
all = ["user-chatbot-backend[dev,gpu,apple-silicon]"]

[project.urls]
Homepage = "https://github.com/your-org/user-chatbot-backend"
Documentation = "https://docs.example.com"
Repository = "https://github.com/your-org/user-chatbot-backend.git"
Issues = "https://github.com/your-org/user-chatbot-backend/issues"

# ================================================================================
# Tool Configurations
# ================================================================================

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | \.tox
  | \.eggs
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
skip_gitignore = true
known_third_party = ["fastapi", "pydantic", "redis", "qdrant_client"]

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, need services)",
    "slow: Slow tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
\`\`\`

---
